[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "regression"
authors = [{name = "Divya Kranthi", email = "divya.kranthi@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest"
]

[project.urls]
Home = "https://github.com/Divvi221/HW7-Regression.git"